@@ -46,6 +46,7 @@ Version 1.9.0-svn:
    * Damage in sidebar now also take account of time of day and leadership.
    * Tooltips of sidebar show more infos.
    * Clicking on some elements of sidebar now open the related help page.
+   * Display weapon stats in recruit/recall dialog the same way as in sidebar.
 
  * Miscellaneous and bug fixes:
    * All villages except water and swamp villages can now be placed on any base
